Testing responsive image

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello World
+<!DOCTYPE html>
+<meta charset="utf-8">
+<head>
+<title>Ashley and Eric Clambake Wedding</title>
+<style>
+html { 
+  background: url(assets/img/IMG_7886.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+</body>
+</html>
+<!-- 
+Sections
+
+
+
+
+ -->
