Image url update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Ashley and Eric Clambake Wedding</title>
 <style>
 html { 
-  background: url(IMG_7886.jpg) no-repeat center center fixed; 
+  background: url(IMG_7886.JPG) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
