Image url update

--- a/index.html
+++ b/index.html
@@ -2,17 +2,34 @@
 <meta charset="utf-8">
 <head>
 <title>Ashley and Eric Clambake Wedding</title>
+<link href='http://fonts.googleapis.com/css?family=Playfair+Display|Josefin+Sans:400,300italic|Quicksand:400,300' rel='stylesheet' type='text/css'>
 <style>
 html { 
-  background: url(img.jpg) no-repeat center center fixed; 
+  background: url(assets/img/bg-min.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+#sidebar {
+	margin-left:20%;
+	margin-top:80px;
+}
+h1 {
+	color:white;
+	font-family:"Josefin Sans";
+	font-style:italic;
+	font-weight:300;
+	font-size:60px;
+}
+
+
 </style>
 </head>
 <body>
+	<div id="sidebar">
+		<h1>Ashley & Eric</h1>
+	</div>
 </body>
 </html>
 <!-- 
