--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ $(document).ready(function() {
 		}
 		if ($(this).attr("id")==="travel") {
 			$(this).addClass("clicked")
-			$("#contentbox").html("For guests coming from the New England area we recommend getting to Block Island via the <a href='http://www.blockislandferry.com/' target='_blank'>Block Island Ferry</a> from Point Judith, RI. Ferries are also available from Fall River, MA, Newport, RI, New London, CT, and Montauk, NY. <br><br>For guests coming from further away we recommend taking a <a href='https://www.capeair.com/' target='_blank'>short flight</a> to Block Island from Providence TF Green Airport. <br><br>For those travelling by train, the Amtrak stops near the ferry landing in New London, CT and the MBTA Commuter Rail stops at TF Green Airport.<br><br>You can find additional travel information <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
+			$("#contentbox").html("For guests coming from the New England area we recommend taking the <a href='http://www.blockislandferry.com/' target='_blank'>Block Island Ferry</a> from Point Judith, RI. Ferries are also available from Fall River, MA, Newport, RI, New London, CT, and Montauk, NY. <br><br>For guests coming from further away we recommend taking a <a href='https://www.capeair.com/' target='_blank'>short flight</a> to Block Island from Providence TF Green Airport. <br><br>For those travelling by train, the Amtrak stops near the ferry landing in New London, CT and the MBTA Commuter Rail stops at TF Green Airport.<br><br>You can find additional travel information <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
 			$("#contentcol").css("visibility","visible");
 		}
 		if ($(this).attr("id")==="accommodation") {
@@ -157,7 +157,7 @@ $(document).ready(function() {
 		}
 		if ($(this).attr("id")==="gettingaround") {
 			$(this).addClass("clicked")
-			$("#contentbox").html("While cars are allowed on the island, bikes and scooters are a great option for getting around during your stay. We're currently looking into group rates for scooter rentals -- check back soon for more info! For those interested in bringing a car, make sure to reserve a ferry berth at least 6 months in advance.<br><br>The wedding venue is a 20 minute walk along the beach from the Old Port, Block Island Ferry landing, and inns where rooms are being held.<br><br>Taxi services are available on the island and may be a good option if you're flying in. You can find additional travel information, including contact information for taxi services, <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
+			$("#contentbox").html("Bikes and scooters are a great option for getting around during your stay. We're currently looking into group rates for scooter rentals -- check back soon for more info!<br><br>For those interested in bringing a car, make sure to reserve a ferry berth at least 6 months in advance.<br><br>The wedding venue is a 20 minute walk from the Old Port, Block Island Ferry landing, and inns where rooms are being held.<br><br>Taxi services are available on the island and may be a good option if you're flying in. You can find additional travel information, including contact information for taxi services, <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
 			$("#contentcol").css("visibility","visible");
 		}
 		if ($(this).attr("id")==="registry") {
