removing about until we have content

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@ li.clicked {
 	margin-top:0px;
 	text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000; 
 }
+#about {
+	display:none;
+}
 
 </style>
 
