--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ $(document).ready(function() {
 		}
 		if ($(this).attr("id")==="gettingaround") {
 			$(this).addClass("clicked")
-			$("#contentbox").html("Bikes and scooters are a great option for getting around during your stay. We're currently looking into group rates for scooter rentals -- check back soon for more info!<br><br>For those interested in bringing a car, make sure to reserve a ferry berth at least 6 months in advance.<br><br>The wedding venue is a 20 minute walk from the Old Port, Block Island Ferry landing, and inns where rooms are being held.<br><br>Taxi services are available on the island and may be a good option if you're flying in. You can find additional travel information, including contact information for taxi services, <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
+			$("#contentbox").html("Bikes and scooters are a great option for getting around during your stay. We're currently looking into group rates for scooter rentals -- check back soon for more info!<br><br>For those interested in bringing a car, make sure to reserve a ferry berth at least 6 months in advance.<br><br>We will be arranging a taxi service to shuttle guests between the Old Port area and the venue on the day of the wedding.<br><br>Taxi services are available on the island and may be a good option if you're flying in. You can find additional travel information, including contact information for taxi services, <a href='http://wikitravel.org/en/Block_Island' target='_blank'>here</a>."); 
 			$("#contentcol").css("visibility","visible");
 		}
 		if ($(this).attr("id")==="registry") {
