Open registry in new tab

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ $(document).ready(function() {
 		}
 		if ($(this).attr("id")==="registry") {
 			$(this).addClass("clicked")
-			$("#contentbox").html("You can check out our wedding registry <a href='https://www.zola.com/registry/ashleyericblockisland'>here</a>.");
+			$("#contentbox").html("You can check out our wedding registry <a href='https://www.zola.com/registry/ashleyericblockisland' target='_blank'>here</a>.");
 			$("#contentcol").css("visibility","visible");
 		}
 	});
